--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
     "mongodb": "^4.4.0",
-    "stripe": "^9.8.0"
+    "sslcommerz": "^1.6.6",
+    "sslcommerz-lts": "^1.1.0",
+    "stripe": "^9.8.0",
+    "uuid": "^8.3.2"
   }
 }
